[package]
name = "ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["raw_value"]}
colored = "2.0.0"
concat-string = "1.0.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[license-file]
license-file = "LICENSE"